@startuml
class SudokuTransformation {
   + Sudoku transform(Sudoku sudoku)
   - void mirrorVertical()
   - void mirrorVertical()
   - void exchangeCols()
   - void exchangeBlockRows()
}

class SudokuFieldsRemover {
   + Sudoku removeFields(Sudoku sudoku, Difficulty dif)
   + boolean isSudokuSolvable(int[][] sudokuField, int row, int col)
   - void removeNumberOfCells(int amountOfCellsToRemove)
   - int countPossibleSolutions(int[][] sudokuGameField)
 }

 class SudokuGeneratorTransformation {
  + Sudoku generateSudoku(Difficulty dif)
 }

SudokuGeneratorTransformation --> SudokuFieldsRemover
SudokuGeneratorTransformation --> SudokuTransformation
@enduml
